# RAG-Notion-Project

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  TODO.md  app.py  main.py  notion_agentic_rag_backlog.md  pyproject.toml  rag_test.py  requirements.txt  test_patch_full.py  test_session_4.py  test_session_5.py
.codex/skills/: README.md
.codex/skills/_template/: SKILL.md
.github/ISSUE_TEMPLATE/: nrag-task.md
.github/workflows/: lint.yml
.planning/: PROJECT.md
conductor/: product-guidelines.md  product.md
config/: settings.py
docs/: ARCHITECTURE.md  ISSUE_FORMAT.md  STREAMLIT_GUIDE.md  agent-harness.md  changelog.md  commands.md  core-beliefs.md  database.md  debugging.md  index.md  patterns.md  streamlit-guide.md  testing.md  vision.md
docs/archive/: README.md  agent-task-log-2026-02-21.md  session-1.md  session-5.md
docs/archive/modules/: app.md  main.md
docs/archive/modules/agents/: planner.md
docs/archive/modules/config/: settings.md
docs/archive/modules/loaders/: notion_loader.md
docs/archive/modules/rag/: embeddings.md
docs/archive/modules/tools/: client.md  code_executor.md  math_solver.md  registry.md
docs/archive/sessions/: 2026-02-18-session-plan-current-todos.md  session-2.md  session-3.md  session-4.md  session-6.md  session-7.md
docs/exec-plans/active/: architecture-md-system-map.md
docs/modules/: README.md  ingest.md  main.md
docs/modules/agents/: llm_factory.md  package.md  reasoner.md  researcher.md  synthesiser.md
docs/modules/config/: settings.md
docs/modules/loaders/: arxiv_loader.md  pipeline.md
docs/modules/orchestrator/: graph.md  state.md
docs/modules/rag/: embeddings.md  retriever.md  text_processing.md  vectorstore.md
docs/modules/tools/: base.md  citation_validator.md  diagram_generator.md  package.md  web_searcher.md
docs/modules/utils/: debugging.md  helpers.md  session_manager.md  tracing.md
docs/utils/: helpers.md  session_manager.md  tracing.md
src/: ingest.py
src/agents/: __init__.py  llm_factory.py  planner.py  reasoner.py  researcher.py  synthesiser.py
src/agents/providers/: __init__.py  base.py  openai.py  qwen.py
src/loaders/: arxiv_loader.py  notion_loader.py  pipeline.py
src/orchestrator/: graph.py  state.py
src/rag/: embeddings.py  retriever.py  text_processing.py  vectorstore.py
src/tools/: __init__.py  base.py  citation_validator.py  client.py  code_executor.py  diagram_generator.py  math_solver.py  registry.py  web_searcher.py
src/utils/: debugging.py  helpers.py  session_manager.py  tracing.py
tests/: conftest.py  debug_reasoner.py  inspect_cohere.py  notion_entry_test.py  rag_test.py  test_debugging.py  test_e2e.py  test_parser_resilience.py  test_patch.py  test_patch_full.py  test_reasoner_fallback.py  test_session_4.py  test_session_manager.py  test_source_display.py  test_tool_agents.py
