[project]
name = "rag-notion-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "chromadb>=1.4.1",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.7",
    "langsmith>=0.6.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]
