[project]
name = "rag-notion-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "chromadb>=1.4.1",
    "httpx>=0.28.1",
    "langchain>=1.2.7",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.7",
    "langsmith>=0.6.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
# Set max line length to 79
line-length = 79

[tool.ruff.lint]
# Enable a solid baseline of rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",  # Line too long (let formatter handle it)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401"]
# Ignore certain rules in test files
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests
