[project]
name = "rag-notion-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "chromadb>=0.4.24",
    "dashscope>=1.24.0",
    "httpx>=0.27.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "pydantic>=2.8.2",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.0.1",
    "streamlit>=1.31.0",
    "sympy>=1.13.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
# Set max line length to 79
line-length = 79

[tool.ruff.lint]
# Enable a solid baseline of rules
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern Python syntax)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that might be too strict
ignore = [
    "E501",  # Line too long (let formatter handle it)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401"]
# Ignore certain rules in test files
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests
